update Subject Group Chat
